--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <main class="grid-container">
         <section class="grid-item">
-            <h2>Ropa de Dama</h2>
+            <h2>Ropa de Dama 2.0</h2>
             <div class="card">
                 <img src="https://ss523.liverpool.com.mx/xl/1101205181.jpg" alt="">
                 <p><strong>Descripción:</strong>del producto.</p>
